--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "homepage": "https://ryuya-hub.github.io/medcareercoach_app",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
