--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -11,10 +11,6 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: frontend
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,10 +23,13 @@ jobs:
           cache-dependency-path: frontend/package-lock.json
 
       - name: Install Dependencies
-        run: npm ci
+        run: cd frontend && npm ci
 
       - name: Build
-        run: npm run build
+        run: cd frontend && npm run build
+
+      - name: Create .nojekyll
+        run: touch frontend/dist/.nojekyll
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
